@@ -62,6 +62,7 @@ sub pmc_compile {
          use strict;
          no strict 'refs';
          no warnings ('void', 'uninitialized');
+         \$::_V6_COMPILER_OS = '$^O';
         " .  
         # "Pugs::Runtime::Perl6Prelude->import();\n" .   # XXX - is import() needed?
         $perl5 . "\n" .
